Gtk-3.20&3.22&4.0: [Budgie-desktop] FIx truncated drop-shadows beneath the GtkSwitch in BudgieSettingsWindow

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -1610,6 +1610,11 @@ window.background.budgie-settings-window.csd {
         &, > viewport.frame { padding-right: 24px; }
       }
     }
+
+    viewport.frame > box.settings-page.vertical {
+      // reserve the margin for raised widget's drop-shadows
+      box.settings-frame.vertical > grid.horizontal { margin-bottom: 6px; }
+    }
   }
 }
 
