--- a/gtk/sass/3.22/_3rd-party.scss
+++ b/gtk/sass/3.22/_3rd-party.scss
@@ -1621,6 +1621,11 @@ window.background.budgie-settings-window.csd {
         &, > viewport.frame { padding-right: 24px; }
       }
     }
+
+    viewport.frame > box.settings-page.vertical {
+      // reserve the margin for raised widget's drop-shadows
+      box.settings-frame.vertical > grid.horizontal { margin-bottom: 6px; }
+    }
   }
 }
 
